[package]
name = "cbb"
version = "0.1.0"
authors = ["0xflotus"]
edition = "2018"

homepage = "https://github.com/0xflotus/cbb"
repository = "https://github.com/0xflotus/cbb"
keywords = ["cli", "converter", "hexadecimal", "base", "octal"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
radix_fmt = "1"