[package]
name = "cbb"
version = "0.1.3"
authors = ["0xflotus"]
license = "MIT"
description = "A base converter"
edition = "2018"

homepage = "https://github.com/0xflotus/cbb"
repository = "https://github.com/0xflotus/cbb"
keywords = ["balanced ternary", "converter", "hexadecimal", "base", "octal"]
categories = ["command-line-utilities", "balanced-ternary"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
radix_fmt = "1"
num = "0.3.1"