[package]
name = "cbb"
version = "0.2.0"
authors = ["0xflotus"]
license = "MIT"
description = "A base converter"
edition = "2018"

homepage = "https://github.com/0xflotus/cbb"
repository = "https://github.com/0xflotus/cbb"
keywords = ["balanced-ternary", "converter", "hexadecimal", "base", "octal"]
categories = ["command-line-utilities"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.8"
radix_fmt = "1"
num = "0.3.1"